--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            ssh ${USER_NAME}@${HOST_NAME} "sudo pip install pipenv"
+            ssh ${USER_NAME}@${HOST_NAME} "pip install pipenv"
             ssh ${USER_NAME}@${HOST_NAME} "cd /var/www/bottler-ai/ && pipenv install"
             ssh ${USER_NAME}@${HOST_NAME} "cd /var/www/bottler-ai/ && python manage.py runserver 0.0.0.0:8000"
 
