--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,10 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "develop" ]; then
                 rsync -rlOtcv --delete --exclude='.git' --exclude='.circleci' ./ ${USER_NAME}@${HOST_NAME}:/var/www/bottler-ai/
             fi
-      - run:
-          name: Deploy Over SSH
-          command: |
-            ssh ${USER_NAME}@${HOST_NAME} "sudo pip install pipenv"
-            ssh ${USER_NAME}@${HOST_NAME} "cd /var/www/bottler-ai/ && pipenv install"
-            ssh ${USER_NAME}@${HOST_NAME} "cd /var/www/bottler-ai/ && python manage.py runserver 0.0.0.0:8000"
+      # - run:
+      #     name: Deploy Over SSH
+      #     command: |
+      #       ssh ${USER_NAME}@${HOST_NAME} "sudo pip install pipenv"
+      #       ssh ${USER_NAME}@${HOST_NAME} "cd /var/www/bottler-ai/ && pipenv install"
+      #       ssh ${USER_NAME}@${HOST_NAME} "cd /var/www/bottler-ai/ && python manage.py runserver 0.0.0.0:8000"
 
