move sock and log

--- a/bottler-ai_uwsgi.ini
+++ b/bottler-ai_uwsgi.ini
@@ -14,7 +14,7 @@ master = true
 # maximum number of worker processes
 processes = 10
 # the socket (use the full path to be safe)
-socket = /var/www/bottler-ai/bottler-ai.sock
+socket = /tmp/bottler-ai.sock
 # ... with appropriate permissions - may be needed
 chmod-socket = 666
 # clear environment on exit
@@ -25,5 +25,5 @@ max-requests = 1000
 # respawn processes taking more than 60 seconds
 harakiri = 60
 
-logto = /var/www/bottler-ai/uwsgi.log
+logto = /tmp/uwsgi.log
 
